Программирование окна Add. Казаков

--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -15,7 +15,7 @@
                     <GridViewColumn Header="Отчество" Width="100" DisplayMemberBinding="{Binding LastName}"/>
                     <GridViewColumn Header="Паспорт" Width="100" DisplayMemberBinding="{Binding Issued}"/>
                     <GridViewColumn Header="Дата выдачи" Width="100" DisplayMemberBinding="{Binding DateOfIssued}"/>
-                    <GridViewColumn Header="Код подразделения" Width="100" DisplayMemberBinding="{Binding DepartamentCode}"/>
+                    <GridViewColumn Header="Код подразделения" Width="100" DisplayMemberBinding="{Binding DepartmentCode}"/>
                     <GridViewColumn Header="Серия и номер" Width="100" DisplayMemberBinding="{Binding SeriesAndNumber}"/>
                     <GridViewColumn Header="Дата рождения" Width="100" DisplayMemberBinding="{Binding DateOfBirth}"/>
                     <GridViewColumn Header="Место рождения" Width="100" DisplayMemberBinding="{Binding PlaceOfBirth}"/>
