Финальная версия Казаков

--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -10,6 +10,13 @@
         <ListView x:Name="lv_passport" Margin="10 10 10 40">
             <ListView.View>
                 <GridView>
+                    <GridViewColumn Header="Фото" Width="100">
+                        <GridViewColumn.CellTemplate>
+                            <DataTemplate>
+                                <Image Source="{Binding Photo}" Width="80" Height="80" Stretch="UniformToFill" />
+                            </DataTemplate>
+                        </GridViewColumn.CellTemplate>
+                    </GridViewColumn>
                     <GridViewColumn Header="Имя" Width="100" DisplayMemberBinding="{Binding Name}"/>
                     <GridViewColumn Header="Фамилия" Width="100" DisplayMemberBinding="{Binding FirstName}"/>
                     <GridViewColumn Header="Отчество" Width="100" DisplayMemberBinding="{Binding LastName}"/>
